prevent events title from breaking on mobile

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -217,11 +217,6 @@ body .navbar
   
 .events .monthlyStatisticsRow
   background-color rgba(0,109,255,0.05)
-  
-.events th.day,
-.events th.migration,
-.events th.politics
-  font-size 21px
 
 .events .day
   width 60px
